--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "axios": "^1.6.8",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "isbot": "^4.1.0",
+    "openai": "^4.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
