--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "isbot": "^4.1.0",
     "openai": "^4.33.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
     "@types/google.maps": "^3.55.7",
     "@types/react": "^18.2.20",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
