--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@react-oauth/google": "^0.12.1",
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
@@ -19,12 +20,16 @@
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "isbot": "^4.1.0",
+    "localforage": "^1.10.0",
     "openai": "^4.33.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^3.6.0",
+    "remix-auth-socials": "^2.0.6"
   },
   "devDependencies": {
+    "@prisma/client": "^5.12.1",
     "@remix-run/dev": "^2.8.1",
     "@types/google.maps": "^3.55.7",
     "@types/react": "^18.2.20",
@@ -40,6 +45,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
